--- a/music.html
+++ b/music.html
@@ -69,6 +69,92 @@
 
 <section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-tWRFOmXcxy" id="footer5-3">
 
+
+
+  
+
+  <title>Leah Najimy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .audio-player {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px auto;
+    }
+
+    .audio-player audio {
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .audio-player .playback-controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 10px;
+    }
+
+    .audio-player .playback-controls button {
+      margin: 5px;
+      padding: 5px;
+      background-color: #f5f5f5;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .audio-player .playback-controls button:hover {
+      background-color: #e0e0e0;
+    }
+
+    @media (max-width: 480px) {
+      .audio-player .playback-controls {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .audio-player .playback-controls button {
+        margin: 5px 0;
+      }
+    }
+
+    .footer {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <h1>BJU</h1>
+  </div>
+
+  <div class="audio-player">
+   <audio controls preload="auto" style="width:100%;">
+      <source src="Sound recordings/Dave Hunt/The Foolishness of Preaching - Dave Hunt.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p class="song-title">The Foolishness of Preaching - Dave Hunt</p>
+
+  </div>
+  
+
     
 
     
