--- a/music.html
+++ b/music.html
@@ -153,6 +153,15 @@
     <p class="song-title">I Carry Your Heart - Leah Najimy</p>
 
   </div>
+
+  <div class="audio-player">
+   <audio controls preload="auto" style="width:100%;">
+      <source src="Music/Give Me Jesus - Leah Najimy.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p class="song-title">Give Me Jesus - Leah Najimy</p>
+
+  </div>
   
 
     
