--- a/music.html
+++ b/music.html
@@ -183,10 +183,10 @@
 
   <div class="audio-player">
    <audio controls preload="auto" style="width:100%;">
-      <source src="Music/Give Me Jesus - Leah Najimy.mp3" type="audio/mp3">
+      <source src="Music/Widmung - Leah Najimy.mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
-    <p class="song-title">Give Me Jesus - Leah Najimy</p>
+    <p class="song-title">Widmung - Leah Najimy</p>
 
   </div>
   
