--- a/music.html
+++ b/music.html
@@ -189,6 +189,15 @@
     <p class="song-title">Widmung - Leah Najimy</p>
 
   </div>
+
+  <div class="audio-player">
+   <audio controls preload="auto" style="width:100%;">
+      <source src="Music/Remember When It Rained - Leah Najimy.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <p class="song-title">Remember When It Rained - Leah Najimy</p>
+
+  </div>
   
 
     
