--- a/music.html
+++ b/music.html
@@ -193,7 +193,7 @@
 
   <div class="audio-player">
    <audio controls preload="auto" style="width:100%;">
-      <source src="Music/Be Still My Soul - Leah Najimy.mp3" type="audio/mp3">
+      <source src="Music/Be Still My Soul - Leah Najimy (2).mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
     <p class="song-title">Be Still My Soul - Leah Najimy</p>
